--- a/Learn Python The Hard Way/spill/templates/layout.html
+++ b/Learn Python The Hard Way/spill/templates/layout.html
@@ -12,7 +12,7 @@ $:content
 
 
 
-<!-- You found the weapon!! Type in: Sword -->
+<!-- You found the weapon!! Type in: sword -->
 
 </body>
 </html>
