Updated some files

--- a/Learn Python The Hard Way/spill/templates/layout.html
+++ b/Learn Python The Hard Way/spill/templates/layout.html
@@ -2,12 +2,14 @@ $def with (content)
 
 <html>
 <head>
+<!-- Defines the charset for this document -->
 <meta charset="UTF-8"> </meta>
 
     <title>IS-206 Assigment 2 - Martine Sivertsen Nilsen</title>
 </head>
 <body>
 
+<!-- gets the python content -->
 $:content
 
 
