Submitting my last updates on udacity homework

--- a/Udacity homework/hw5/templates/rot13-form.html
+++ b/Udacity homework/hw5/templates/rot13-form.html
@@ -2,11 +2,12 @@
 
 <html>
   <head>
-    <title>Unit 2 Rot 13</title>
+   <meta charset="utf-8">
+    <title>Rot 13</title>
   </head>
 
   <body>
-    <h2>Enter some text to ROT13:</h2>
+    <h2>Skriv inn teksten som du vil Rot13:</h2>
     <form method="post">
       <textarea name="text"
                 style="height: 100px; width: 400px;">{{text}}</textarea>
