--- a/Udacity homework/hw5/templates/signup-form.html
+++ b/Udacity homework/hw5/templates/signup-form.html
@@ -2,7 +2,9 @@
 
 <html>
   <head>
-    <title>Unit 2 Rot 13</title>
+   <meta charset="utf-8">
+   
+    <title>Registrer Deg</title>
     <style type="text/css">
       .label {text-align: right}
       .error {color: red}
@@ -11,12 +13,12 @@
   </head>
 
   <body>
-    <h2>Signup</h2>
+    <h2>Registrering</h2>
     <form method="post">
       <table>
         <tr>
           <td class="label">
-            Username
+            Brukernavn
           </td>
           <td>
             <input type="text" name="username" value="{{username}}">
@@ -28,7 +30,7 @@
 
         <tr>
           <td class="label">
-            Password
+            Passord
           </td>
           <td>
             <input type="password" name="password" value="">
@@ -40,7 +42,7 @@
 
         <tr>
           <td class="label">
-            Verify Password
+            Verifiser passord 
           </td>
           <td>
             <input type="password" name="verify" value="">
@@ -52,7 +54,7 @@
 
         <tr>
           <td class="label">
-            Email (optional)
+           E-post
           </td>
           <td>
             <input type="text" name="email" value="{{email}}">
