--- a/Udacity homework/hw5/templates/newpost.html
+++ b/Udacity homework/hw5/templates/newpost.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>new post</h2>
+  <h2>Ny Post</h2>
 
     <form method="post">
       <label>
-        <div>subject</div>
+        <div>Topic</div>
         <input type="text" name="subject" value="{{subject}}">
       </label>
 
       <label>
-        <div>blog</div>
+        <div>Blogg</div>
         <textarea name="content">{{content}}</textarea>
       </label>
 
