--- a/Udacity homework/hw5/templates/welcome.html
+++ b/Udacity homework/hw5/templates/welcome.html
@@ -2,10 +2,10 @@
 
 <html>
   <head>
-    <title>Unit 2 Signup</title>
+    <title>Registrering</title>
   </head>
 
   <body>
-    <h2>Welcome, {{username}}!</h2>
+    <h2>Velkommen, {{username}}!</h2>
   </body>
 </html>
