--- a/Udacity homework/hw5/templates/login-form.html
+++ b/Udacity homework/hw5/templates/login-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- Basic HTML making a login form. --> 
 <html>
   <head>
    <meta charset="utf-8">
@@ -33,7 +33,7 @@
           </td>
         </tr>
       </table>
-
+ <!-- Cheks if there are any errors in the login parameters, does the user excist? Uses code from python--> 
       <div class="error">
         {{error}}
       </div>
