--- a/Udacity homework/hw5/templates/newpost.html
+++ b/Udacity homework/hw5/templates/newpost.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+<!-- Uses base.html as main structure--> 
+{% extends "base.html" %} 
 
 {% block content %}
   <h2>Ny Post</h2>
@@ -11,6 +12,7 @@
 
       <label>
         <div>Blogg</div>
+        
         <textarea name="content">{{content}}</textarea>
       </label>
 
