--- a/Udacity homework/hw5/templates/signup-form.html
+++ b/Udacity homework/hw5/templates/signup-form.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<!-- A simple sign up form.
+.Uses python script to check if sign up parameters are correct. 
+for instance, password and verify password needs to be the same  --> 
 <html>
   <head>
    <meta charset="utf-8">
