--- a/Udacity homework/hw5/templates/welcome.html
+++ b/Udacity homework/hw5/templates/welcome.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<!-- User gets here after registration, takes the username of the new user and says hello--> 
 <html>
   <head>
-    <title>Registrering</title>
+    <title> Velkommen!</title>
   </head>
 
   <body>
