--- a/Udacity homework/hw5/templates/permalink.html
+++ b/Udacity homework/hw5/templates/permalink.html
@@ -1,5 +1,7 @@
+<!-- Signals that this template extends a parent template. -->
 {% extends "base.html" %}
 
+<!-- Defines a block that can be overridden by child templates --> 
 {% block content %}
   {{post.render() | safe}}
 {% endblock %}
