--- a/Udacity homework/Hele prosjektet/templates/rot13-form.html
+++ b/Udacity homework/Hele prosjektet/templates/rot13-form.html
@@ -1,87 +1,102 @@
-
 <!DOCTYPE html>
+
 <html>
 <head>
-<meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/static/style.css" />
-  <title>Assigment 3 Is-206</title>
+    <meta charset="utf-8">
+    <link href="/static/style.css" rel="stylesheet" type="text/css">
+
+    <title>Assigment 3 Is-206</title>
 </head>
 
-
 <body>
-  <div id="main">
-    <div id="header">
-      <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="/l">Martine Sivertsen Nilsen</a></h1>
-          <h2>Assigment 3</h2>
-        </div>
-      </div>
-      <div id="menubar">
-        <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="/">Hjem</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/blog/newpost">Ny post</a></li>
-          <li><a href="/signup">Registrer deg</a></li>
-          <li><a href="/login">Logg inn</a></li>
-          <li class="selected"><a href="/rot13">Rot 13</a></li>
-        </ul>
-      </div>
-    </div>
-    
-    <div id="content_header"></div>
-    <div id="site_content">
-  
+    <div id="main">
+        <div id="header">
+            <div id="logo">
+                <div id="logo_text">
+                    <!-- class="logo_colour", allows you to change the colour of the text -->
 
-      <div id="sidebar_container">
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <!-- insert your sidebar items here -->
-            <h3>Om nettsiden</h3>
-        
-            <p>Denne nettisden er laget i forbindelse med is-206. Designet krediteres til <a href="http://www.opendesigns.org/design/simple-style-4/">Open Designs</a></p>
-          </div>
-          
-          <div class="sidebar_base"></div>
+                    <h1><a href="/l">Martine Sivertsen Nilsen</a></h1>
+
+                    <h2>Assigment 3</h2>
+                </div>
+            </div>
+
+            <div id="menubar">
+                <ul id="menu">
+                    <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+
+                    <li><a href="/">Hjem</a></li>
+
+                    <li><a href="/blog">Blog</a></li>
+
+                    <li><a href="/blog/newpost">Ny post</a></li>
+
+                    <li><a href="/signup">Registrer deg</a></li>
+
+                    <li><a href="/login">Logg inn</a></li>
+
+                    <li class="selected"><a href="/rot13">Rot 13</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-         
-          <div class="sidebar_base"></div>
+
+        <div id="site_content">
+            <div id="sidebar_container">
+                <div class="sidebar">
+                    <div class="sidebar_top"></div>
+
+                    <div class="sidebar_item">
+                        <!-- insert your sidebar items here -->
+
+                        <h3>Om nettsiden</h3>
+
+                        <p>Denne nettisden er laget i forbindelse med is-206.
+                        Designet krediteres til <a href=
+                        "http://www.opendesigns.org/design/simple-style-4/">Open
+                        Designs</a></p>
+                    </div>
+
+                    <div class="sidebar_base"></div>
+                </div>
+
+                <div class="sidebar">
+                    <div class="sidebar_top"></div>
+
+                    <div class="sidebar_base"></div>
+                </div>
+
+                <div class="sidebar">
+                    <div class="sidebar_top"></div>
+
+                    <div class="sidebar_item">
+                        {% if user %}
+
+                        <p>Du er logget inn som:</p>{{user.name}} (<a class=
+                        "login-link" href="/logout">logout</a>) {% else %}
+                        <a class="login-link" href="/login">Logg Inn</a> |
+                        <a class="login-link" href="/signup">Registrer deg</a>
+                        {% endif %}
+                    </div>
+
+                    <div class="sidebar_base"></div>
+                </div>
+            </div>
+
+            <div id="content">
+                <h2>Skriv inn teksten som du vil Rot13:</h2>
+
+                <form method="post">
+                    <textarea name="text" style="height: 100px; width: 400px;">
+{{text}}
+</textarea><br>
+                    <input type="submit">
+                </form>
+            </div>
         </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-             {% if user %}
-      <p> Du er logget inn som:</p>   {{user.name}} (<a class="login-link" href="/logout">logout</a>)
-    {% else %}
-      <a class="login-link" href="/login">Logg Inn</a>
-      |
-      <a class="login-link" href="/signup">Registrer deg</a>
-    {% endif %}
-          </div>
-          <div class="sidebar_base"></div>
+
+        <div id="footer">
+            MSN/2013
         </div>
-      </div>
-      <div id="content">
-        
-     <h2>Skriv inn teksten som du vil Rot13:</h2>
-    <form method="post">
-      <textarea name="text"
-                style="height: 100px; width: 400px;">{{text}}</textarea>
-      <br>
-      <input type="submit">
-    </form>
-       
-      </div>
     </div>
-    <div id="content_footer"></div>
-    <div id="footer">
-     MSN/2013
-    </div>
-  </div>
 </body>
 </html>
