--- a/Udacity homework/Hele prosjektet/templates/frontpage.html
+++ b/Udacity homework/Hele prosjektet/templates/frontpage.html
@@ -6,10 +6,9 @@
     <meta charset="utf-8">
     <!-- Linker til css stylesheet for å gi utseende til nettsiden.-->
     <link href="/static/style.css" rel="stylesheet" type="text/css">
-
     <title>Assigment 3 Is-206</title>
-</head><!-- Body start -->
-
+</head>
+<!-- Body start -->
 <body>
     <!-- main er definerer hele siden -->
     <div id="main">
@@ -20,8 +19,7 @@
                 <!-- Eventuel tekst under logoen-->
                 <div id="logo_text">
                     <!-- class="logo_colour", allows you to change the colour of the text -->
-                    <h1><a href="/l">Martine Sivertsen Nilsen</a></h1>
-
+                    <h1><a href="/">Martine Sivertsen Nilsen</a></h1>
                     <h2>Assigment 3</h2>
                 </div>
             </div><!-- Hele meny baren -->
@@ -42,7 +40,8 @@
                     <li><a href="/rot13">Rot 13</a></li>
                 </ul>
             </div>
-        </div><!-- Definerer content + sidebar-->
+        </div>
+        <!-- Definerer content + sidebar-->
         <div id="site_content">
             <!-- Sidebar container har 3 bokser som kan fylles, hver boks er 3 delt, top del, mellom(innholdet) og bunn. -->
             <div id="sidebar_container">
@@ -83,14 +82,15 @@
 
                     <div class="sidebar_base"></div>
                 </div>
-            </div><!-- hovedboksen på nettsiden. -->
-
+            </div>
+            <!-- hovedboksen på nettsiden. -->
             <div id="content">
                 <h3>Velkommen</h3>
 
                 <p>Nettsiden er under konstruksjon</p>
             </div>
-        </div><!-- Div for footeren-->
+        </div>
+        <!-- Div for footeren-->
         <div id="footer">
             MSN/2013
         </div>
